# dbt-fusion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSES.md  rust-toolchain.toml
.changes/unreleased/: Features-20250818-092411.yaml  Features-20250909-182347.yaml  Features-20251114-134313.yaml  Fixes-20250916-123207.yaml  Fixes-20250918-003644.yaml  Fixes-20250922-100627.yaml  Fixes-20250928-154041.yaml  Fixes-20251004-001906.yaml  Fixes-20251121-123213.yaml  Under the Hood-20251001-140650.yaml  Under the Hood-20251002-182246.yaml
.github/workflows/: auto-public-pr-copybara.yml  enforce-branch-protections.yml
crates/dbt-adapter/: Cargo.toml
crates/dbt-auth/: Cargo.toml
crates/dbt-auth/src/: lib.rs
crates/dbt-auth/src/bigquery/: mod.rs
crates/dbt-auth/src/databricks/: mod.rs
crates/dbt-auth/src/redshift/: mod.rs  token_service.rs
crates/dbt-auth/src/snowflake/: key_format.rs  mod.rs
crates/dbt-init/: Cargo.toml
crates/dbt-init/assets/moms_flower_shop/: README.md  dbt_project.yml
crates/dbt-init/assets/moms_flower_shop/models/analytics/: agg_installs_and_campaigns.sql  agg_installs_and_campaigns.yml  agg_installs_ranked.sql  agg_installs_ranked.yml  campaign_comparison.sql  campaign_performance_summary.sql  campaign_roi_dashboard.sql  campaign_roi_dashboard.yml  customer_acquisition_cost.sql  daily_active_users.sql  daily_active_users.yml  geographic_analysis.sql  geographic_analysis.yml  hourly_event_patterns.sql  hourly_event_patterns.yml  platform_performance_metrics.sql  platform_performance_metrics.yml
crates/dbt-init/assets/moms_flower_shop/models/staging/: schema.yml  stg_app_installs.sql  stg_customers.sql  stg_inapp_events.sql  stg_installs_per_campaign.sql  stg_marketing_campaigns.sql
crates/dbt-init/assets/moms_flower_shop/seeds/: raw_inapp_events.csv  schema.yml
crates/dbt-init/src/: dbt_cloud_client.rs  init.rs  mod.rs  profile_setup.rs  yaml_utils.rs
crates/dbt-init/src/adapter_config/: bigquery_config.rs  databricks_config.rs  redshift_config.rs  snowflake_config.rs
crates/dbt-jinja-utils/: Cargo.toml
crates/dbt-jinja-utils/src/: environment_builder.rs  flags.rs  invocation_args.rs  jinja_environment.rs  lib.rs  listener.rs  node_resolver.rs  refs_and_sources.rs  serde.rs  typecheck.rs  typecheck_listener.rs  utils.rs
crates/dbt-jinja-utils/src/functions/: base.rs  configured_var.rs  contract_error.rs
crates/dbt-jinja-utils/src/phases/: compile_and_run_context.rs  utils.rs
crates/dbt-jinja-utils/src/phases/compile/: compile_config.rs  compile_node_context.rs  mod.rs
crates/dbt-jinja-utils/src/phases/load/: init.rs
crates/dbt-jinja-utils/src/phases/parse/: init.rs  resolve_context.rs  resolve_model_context.rs  sql_resource.rs
crates/dbt-jinja-utils/src/phases/run/: lazy_model.rs  mod.rs  run_config.rs  run_node_context.rs
crates/dbt-py/: Cargo.toml  pyproject.toml
crates/dbt-py/src/: lib.rs
crates/dbt-sample/: Cargo.toml
crates/dbt-sample/src/: lib.rs  plan.rs
crates/dbt-schema-store/: Cargo.toml
crates/dbt-schema-store/src/: lib.rs  mock_store.rs  store.rs
crates/dbt-sql/dbt-lexer-redshift/: Cargo.toml
crates/dbt-sql/dbt-lexer-redshift/src/: lib.rs
crates/dbt-sql/dbt-lexer-trino/: Cargo.toml
crates/dbt-sql/dbt-lexer-trino/src/: lib.rs
crates/dbt-sql/dbt-sql-utils/: Cargo.toml
crates/dbt-sql/dbt-sql-utils/src/: input_streams.rs  lib.rs
crates/dbt-sql/dbt-sql-utils/src/splitter/: mod.rs  tests.rs
crates/dbt-telemetry/: Cargo.toml
crates/dbt-telemetry/src/: lib.rs
crates/dbt-telemetry/src/attributes/: context.rs  export.rs  mod.rs  registry.rs  traits.rs  wrapper.rs
crates/dbt-telemetry/src/schemas/: location.rs  mod.rs  otlp.rs  record.rs
crates/dbt-telemetry/src/schemas/log/: artifact.rs  list_item.rs  log_message.rs  mod.rs  show_data.rs
crates/dbt-telemetry/src/schemas/span/: artifact.rs  deps.rs  dev.rs  invocation.rs  mod.rs  node.rs  onboarding.rs  phase.rs  process.rs  query.rs  update.rs
crates/dbt-telemetry/src/serialize/: arrow.rs  mod.rs  otlp.rs
crates/dbt-test-utils/: Cargo.toml
crates/dbt-test-utils/src/: mod.rs  profiles.rs  test_env_guard.rs
crates/dbt-test-utils/src/task/: artifact_validation.rs  check_compiled.rs  env.rs  goldie.rs  io.rs  log_capture.rs  mod.rs  task_seq.rs  tasks.rs  utils.rs
crates/dbt-test-utils/tests/: dbt_test_utils_tests.rs
crates/proto-rust/: Cargo.toml  README.md
crates/proto-rust-macros/: Cargo.toml
crates/proto-rust-macros/src/: lib.rs
crates/proto-rust/include/dbtlabs/proto/public/v1/events/: fusion.proto  mcp.proto  vscode.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/artifact/: artifact.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/compat/: otlp.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/dev/: dev.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/invocation/: invocation.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/log/: compiled.proto  list_item.proto  log.proto  show_data.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/node/: node.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/onboarding/: onboarding.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/phase/: phase.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/process/: process.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/query/: query.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/events/fusion/update/: update.proto
crates/proto-rust/include/dbtlabs/proto/public/v1/fields/: core_types.proto  vscode_types.proto
crates/proto-rust/src/: lib.rs  macros.rs  serde_timestamp_micros.rs  static_full_name.rs  test_utils.rs
crates/proto-rust/src/impls/: mod.rs  v1_public_events_fusion_compat.rs  v1_public_events_fusion_deps.rs  v1_public_events_fusion_dev.rs  v1_public_events_fusion_log.rs  v1_public_events_fusion_node.rs  v1_public_events_fusion_phase.rs  v1_public_events_fusion_query.rs
scratchpad/: test.py
(+597 files in other folders)
