[package]
name = "dbt-auth"
description = "Auth methods for database drivers used by dbt"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-serde_yaml = { workspace = true }
dbt-xdbc = { workspace = true }

adbc-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
once_cell = { workspace = true }
percent-encoding = "2.3.1"
pkcs8 = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dbt-test-primitives = { workspace = true }

[lib]
name = "dbt_auth"
path = "src/lib.rs"
doctest = false

[features]
odbc = ["dbt-xdbc/odbc"]
