[package]
name = "dbt-sample"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

# Workspace crates
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
