[package]
authors.workspace = true
description = "Generated Antlr lexer for the Redshift dialect"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dbt-lexer-redshift"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
antlr-rust = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }

[lib]
doctest = false
